#####                         CHANGELOG                                    #####
#####                                                                      #####
################################################################################

0.1.*: UPDATES
--------------------------------------------------------------------------------
* 67: Vignette chapter about calculatePairwiseSimilarities added
* 66: Additional and more detailed input checks for calculatePairwiseSimilarities added
* 65: Help file description for calculatePairwiseSimilarities adjusted
* 64: Vignette updated for replicates and negative controls
* 63: Bugfix: estimateErrors concidered sp.markers only when sexing was performed, they act no independent
* 62: Changed sexing=FALSE as new default in estimateErrors()
* 61: Added more careful input checks to estimateErrors
* 60: Updated the function description for estimateErrors
* 59: Harmonised the output from 'cat' and 'print' to 'message' in fluidigm2PLINK
* 58: Bugfix: The out option in fluidigm2PLINK was not working properly
* 57: Option overwrite added to fluidigm2PLINK function
* 56: Vignette part of fluidigm2PLINK added
* 55: Details in Rd file for fluidigm2PLINk added
* 54: More input checks for fluidigm2PLINK
* 53: Input checks added to calculatePairwiseSimilarities.R
* 52: More details to calculatePairwiseSimilarities.R added
* 51: Added manual skeletons for Details and Examples
* 50: Added the vignette skeleton
* 49: Added co-authors and contributers
* 48: Missing function parameters added to the documentation
* 47: Adding verbosity option for more detailed function feedback (split from verbose logical/numerical mix)
* 46: Placed importFrom under usethis control ( usethis::use_import_from("grDevices", "png") )
* 45: Added sexing option tocalculatePairwiseSimilarities() function  (=run PLINK with --allow-no-sex option)
* 44: Adjusted the fluidigmAnalysisWrapper function so that it works again