@@ -1,6 +1,6 @@
 Package: Fluidigm
 Title: Handling Fluidigm Data
-Version: 0.1.67
+Version: 0.1.70
 Authors@R:
  c(person(given="Daniel", family="Fischer", email="Daniel.Fischer@luke.fi", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7513-683X")),
